added node and npm versions in json engine

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "express-handlebars": "^7.1.0",
     "express-session": "^1.17.3",
     "mysql2": "^3.5.2"
+  },
+  "engines": {
+    "node": "16.8.10",
+    "npm": "9.8.1"
   }
 }
